--- a/app/src/main/res/layout/activity_svmclassifier.xml
+++ b/app/src/main/res/layout/activity_svmclassifier.xml
@@ -9,9 +9,10 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="28dp"
+        android:layout_marginLeft="32dp"
         android:layout_marginTop="68dp"
         android:text="Number of validations"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,21 +34,23 @@
         android:layout_marginEnd="28dp"
         android:layout_marginTop="68dp"
         android:text="Random number seed"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="144dp"
-        android:layout_height="49dp"
+        android:layout_width="146dp"
+        android:layout_height="40dp"
         android:layout_marginEnd="28dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginRight="28dp"
+        android:layout_marginTop="104dp"
         android:ems="10"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="186dp" />
 
     <Spinner
         android:id="@+id/spinner2"
@@ -55,7 +58,7 @@
         android:layout_height="41dp"
         android:layout_marginBottom="260dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.417"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
@@ -65,8 +68,8 @@
         android:layout_height="27dp"
         android:layout_marginTop="168dp"
         android:text="Kernel"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        app:layout_constraintHorizontal_bias="0.647"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -78,9 +81,10 @@
         android:layout_marginStart="52dp"
         android:text="TRAIN"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteX="52dp"
         android:layout_marginTop="18dp"
-        app:layout_constraintTop_toBottomOf="@+id/spinner2" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner2"
+        android:layout_marginLeft="32dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/button6"
@@ -89,9 +93,10 @@
         android:layout_marginEnd="64dp"
         android:text="TEST"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteX="206dp"
         android:layout_marginTop="18dp"
-        app:layout_constraintTop_toBottomOf="@+id/spinner2" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner2"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/textView16"
